--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "math-kit": "^0.16.25",
-    "string-kit": "^0.18.3"
+    "string-kit": "^0.18.3",
+    "terminal-kit": "^3.1.1"
   },
   "scripts": {
     "test": "tea-time -R dot"
